# s3_navigator

./: .gitignore  README.md  README.rst  conf.py  index.rst  pyproject.toml
pathlibs3/: __init__.py  pathlibs3.py
s3_navigator/: s3_navigator.py
tests/: conftest.py  test_pathlibs3.py  test_s3_navigator.py
