[tool.poetry]
name = "pathlibs3"
version = "0.2.7"
description = "S3 navigation using object, inspired by pathlib.Path"
authors = ["thibault.blanc"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "*"
urllib3 = "*"

Sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
moto = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]
